refactors, http connector

--- a/src/main/resources/HttpConnector.properties
+++ b/src/main/resources/HttpConnector.properties
@@ -3,6 +3,9 @@ kinesisInputStream = cwl-subscription-sample-filtered
 appName = cwl-subscription-sample-filtered-3
 regionName = us-west-2
 
+httpUrl = http://localhost:9090
+httpHeaders = Content-Type=application/json
+
 # KCL Configuration
 initialPositionInStream = TRIM_HORIZON
 idleTimeBetweenReads = 200
